# meter

./: .SRCINFO  .gitignore  Makefile  PKGBUILD  README.md  config.json  config.py  main.py  meter-tray.install  pyproject.toml  requirements.txt  run.sh
.github/workflows/: release.yml
autostart/: meter.desktop
providers/: __init__.py  base.py  manager.py
src/meter/: __main__.py  config.py  main.py
src/meter/providers/: base.py  codex.py  manager.py  opencode.py
src/meter/ui/: tray.py
systemd/: meter.service
ui/: __init__.py  tray.py
